--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,23 +30,83 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: "Pt Sans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
   color: #333333;
-  background-color: #fff;
+  background-color: #f2f2f2;
+}
+
+/* .visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+} */
+
+.container {
+  width: 1200px;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+  background: #fff;
+  margin: 0 auto;
+}
+
+.button {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fff;
+  background: #756157;
+  border-radius: 4px;
+  padding: 8px 14px;
+  border: none;
+  text-decoration: none;
+  display: block;
+}
+
+.button-blue {
+  background: #82b3d3;
 }
 
 /* header */
 
 .main-header {
+  display: flex;
   background-color: #fff;
   color: #000000;
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
+  padding: 0 70px;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 30px;
+  width: 100%;
+}
+
+.navigation-list {
+  margin: 0;
+  padding: 0;
 }
 
 .navigation-link {
@@ -54,21 +114,27 @@ body {
   text-decoration: none;
   text-align: center;
 }
-.navigation-link-search{
+
+.navigation-link-search {
   background: url(../images/icons/search.svg) no-repeat;
 }
-.navigation-link-selected{
+
+.navigation-link-selected {
   background: url(../images/icons/heart.svg) no-repeat;
 }
 
 /* end header */
 
 /* main index*/
+.main-index {
+  flex-grow: 1;
+}
 
 .slogan {
   background: rgba(131, 179, 211, 0.2) url(../images/index-bacground.jpg) center /
     cover no-repeat;
-  height: 485px;
+  /* height: 485px; */
+  text-align: center;
 }
 
 .section-title {
@@ -86,13 +152,14 @@ body {
   line-height: 26px;
   text-align: center;
 }
+
 .advantages-image {
   display: block;
 }
-.advantages-block {
-  padding: 103px 85px;
-  /* width: 400px;
-  height: 385px; */
+
+.advantages-block,
+.relax-block {
+  display: flex;
 }
 
 .advantages-title {
@@ -111,15 +178,35 @@ body {
 .advantages-bridge {
   background: #82b3d3;
   color: #fff;
+  padding: 103px 85px;
+  width: 400px;
 }
 
 .advantages-square,
 .advantages-turist {
   background: rgba(131, 179, 211, 0.12);
+  padding: 103px 85px;
+  width: 400px;
 }
 
 .advantages-road {
   background: rgba(131, 179, 211, 0.2);
+  padding: 103px 85px;
+  width: 400px;
+}
+
+.relax-housing,
+.relax-souvenir {
+  background: rgba(131, 179, 211, 0.12);
+  padding: 80px 85px;
+  width: 400px;
+  text-align: center;
+}
+
+.relax-food {
+  padding: 80px 85px;
+  width: 400px;
+  text-align: center;
 }
 
 .rest-block {
@@ -134,47 +221,36 @@ body {
   text-transform: uppercase;
   color: #000;
 }
+
 .rest-housing,
 .rest-souvenir {
   background: rgba(131, 179, 211, 0.12);
 }
+
 .rest-food {
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
   background: #fff;
 }
+
 .interest {
   text-align: center;
 }
 
-.button {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 36px;
-  text-transform: uppercase;
-  text-align: center;
-  color: #fff;
-  background: #756157;
-  border-radius: 4px;
-  padding: 8px 50px;
-  border: none;
-  text-decoration: none;
-}
-.button-blue{
-  background: #82b3d3;
-}
 .mailing {
   background: #82b3d3 url(../images/bacground-mailing.jpg) center / cover
     no-repeat;
   color: #fff;
   text-align: center;
-  height: 415px;
 }
+
 .mailing-title {
   color: #fff;
 }
+
 .additional-button {
   background-color: #82b3d3;
 }
+
 .mailing-input {
   border-radius: 4px 0 0 4px;
   padding-left: 20px;
@@ -191,13 +267,17 @@ body {
   background: rgba(131, 179, 211, 0.2) url(../images/catalog-background.jpg)
     center / cover no-repeat;
   color: #fff;
+  padding: 35px 70px 70px;
 }
+
 .hotel-title {
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
   color: #fff;
+  margin: 0;
 }
+
 .home {
   background: url(../images/icons/home.svg) no-repeat;
 }
@@ -205,6 +285,7 @@ body {
 .breadcrumbs-item {
   display: inline-block;
 }
+
 .breadcrumbs-item::before {
   content: url(../images/icons/breadcrumbs-arrow.svg);
   margin-left: 10px;
@@ -212,79 +293,167 @@ body {
   width: 8px;
   height: 11px;
 }
-.breadcrumbs-item:first-child::before{
+
+.breadcrumbs-item:first-child::before {
   content: "";
 }
-.breadcrumbs-link{
+
+.breadcrumbs-link {
   font-weight: 400;
-font-size: 16px;
-line-height: 21px;
-color: #fff;
-text-decoration: none;
+  font-size: 16px;
+  line-height: 21px;
+  color: #fff;
+  text-decoration: none;
 }
-.catalog-filter-title{
+.catalog-filter {
+  display: flex;
+  justify-content: space-between;
+}
+
+.catalog-filter-title {
   font-weight: 700;
-font-size: 20px;
-line-height: 24px;
-text-transform: capitalize;
-color: #fff;
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: capitalize;
+  color: #fff;
 }
-.control{
+.catalog-filter-price {
+  width: 288px;
+}
+.catalog-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.hotel-cart{
+  margin: 0 70px;
+}
+.hotel-cart-sorts{
+  display: flex;
+}
+
+.select-control {
+  font-family: inherit;
   font-weight: 400;
-font-size: 18px;
-line-height: 23px;
-color: #fff;
+  font-size: 18px;
+  line-height: 21px;
+  color: #333;
+  margin-left: auto;
 }
-.hotel-cart-title{
+
+.hotel-cart-title {
   font-weight: 700;
-font-size: 30px;
-line-height: 36px;
-text-transform: uppercase;
-color: #000;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000;
 }
-.sort-cart{
+
+.sort-lists{
+  display: flex;
+  align-items: center;
+    margin-left: 70px;
+}
+
+.sort-cart {
   background: url(../images/icons/variant=tile.svg) no-repeat;
 }
-.sort-slide{
+
+.sort-slide {
   background: url(../images/icons/variant-slideshow.svg) no-repeat;
 }
-.sort-list{
+
+.sort-list {
   background: url(../images/icons/variant-list.svg) no-repeat;
 }
 
-.product-card{
+.product-cards{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.product-card {
   border: 1px solid #e5e5e5;
-border-radius: 4px;
-padding: 20px;
-}
-.product-card-link{
-  text-decoration: none;
-}
-.product-card-title{
-  font-weight: 700;
-font-size: 24px;
-line-height: 28px;
-color: #000;
+  border-radius: 4px;
+  /* padding: 20px; */
+  width:  340px;
 }
 
-.rating .rating-star{
+.product-card-link {
+  text-decoration: none;
+  display: block;
+  padding-left: 20px;
+  padding-top: 20px;
+}
+
+.product-card-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000;
+  margin-top: 16px;
+}
+.product-card-description{
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.buttons-block{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+.rating .rating-star {
   background: url(../images/icons/star.svg) no-repeat;
 }
-.rating-result{
+
+.rating-result {
   font-weight: 400;
-font-size: 16px;
-line-height: 20px;
-text-transform: uppercase;
-background: #f2f2f2;
-border-radius: 4px;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  background: #f2f2f2;
+  border-radius: 4px;
 }
-.mailing-catalog{
+
+.pagination{
+  display: flex;
+  padding: 0;
+}
+.pagination-item{
+  border-radius: 4px;
+  width: 60px;
+  height: 60px;
+  display: block;
+  text-align: center;
+  align-content: center;
+  font-weight: 700;
+font-size: 20px;
+line-height: 36px;
+text-transform: uppercase;
+color: #fff;
+background-color: #82b3d3;
+margin-left: 10px;
+}
+
+.pagination-item-current {
+  background-color: #f2f2f2;
+  color: inherit;
+}
+.pagination-item-skip{
+  background: none;
+  color: #333;
+}
+
+.mailing-catalog {
   background-color: #fff;
   color: #333;
   text-align: center;
   height: 415px;
 }
-.mailing-catalog .mailing-title{
+
+.mailing-catalog .mailing-title {
   color: #000;
 }
 
@@ -294,13 +463,19 @@ border-radius: 4px;
 
 .main-footer {
   background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 70px;
 }
+
 .button-social-vk {
   background: url(../images/icons/Social-Vk.svg) center no-repeat;
 }
+
 .button-social-telegram {
   background: url(../images/icons/Social-Telegram.svg) center no-repeat;
 }
+
 .button-social-youtube {
   background: url(../images/icons/Social-Youtube.svg) center no-repeat;
 }
@@ -314,7 +489,9 @@ border-radius: 4px;
   color: #000;
   text-decoration: none;
 }
+
 .logo-academy p {
   background: url(../images/icons/brand-htmlacademy.svg) no-repeat;
 }
+
 /* end footer */
