--- a/styles/styles.css
+++ b/styles/styles.css
@@ -126,11 +126,11 @@ body {
 }
 
 .navigation-link-search {
-  background: url(../images/icons/search.svg) no-repeat;
+  background: url(../images/icons/search.svg) center no-repeat;
 }
 
 .navigation-link-selected {
-  background: url(../images/icons/heart.svg) no-repeat;
+  background: url(../images/icons/heart.svg) center no-repeat;
 }
 
 /* end header */
@@ -145,38 +145,12 @@ body {
     url(../images/index-bacground.jpg) center / cover no-repeat rgba(131, 179, 211, 0.2);
   text-align: center;
   padding-top: 50px;
-  padding-bottom: 84px;
-  margin-bottom: 70px;
-}
-
-.advantages {
-  margin-bottom: 64px;
+  padding-bottom: 82px;
 }
 
 .advantages-intro {
-  margin-bottom: 70px;
-  margin-left: 274px;
-  margin-right: 274px;
-}
-
-.relax {
-  margin-bottom: 96px;
-}
-
-.relax-intro {
-  margin-bottom: 64px;
-  margin-left: 347px;
-  margin-right: 347px;
-}
-
-.interest {
-  margin-bottom: 96px;
-  margin-left: 304px;
-  margin-right: 304px;
-}
-
-.mailing {
-  padding: 96px 258px 104px 258px;
+  padding: 70px 270px;
+  grid-column: 1 / -1;
 }
 
 .section-title {
@@ -197,13 +171,9 @@ body {
   text-align: center;
 }
 
-.advantages-image {
-  display: block;
-}
-
-.advantages-block,
-.relax-block {
-  display: flex;
+.advantages {
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
 }
 
 .advantages-title {
@@ -222,68 +192,72 @@ body {
 .advantages-bridge {
   background: #82b3d3;
   color: #fff;
-  padding: 103px 85px;
-  width: 400px;
+  padding: 0 85px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.advantages-image-1 {
+  grid-column: 2 / -1;
+  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.advantages-image-2 {
+  grid-column: 1 / 3;
+  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .advantages-square,
 .advantages-turist {
   background: rgba(131, 179, 211, 0.12);
   padding: 103px 85px;
-  width: 400px;
 }
 
 .advantages-road {
   background: rgba(131, 179, 211, 0.2);
-  padding: 103px 85px;
-  width: 400px;
+  padding: 0 85px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.relax{
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+}
+
+.relax-intro {
+  padding: 64px 347px;
+  grid-column: 1 / -1;
 }
 
 .relax-housing,
 .relax-souvenir {
   background: rgba(131, 179, 211, 0.12);
   padding: 80px 85px;
-  width: 400px;
   text-align: center;
 }
 
 .relax-food {
   padding: 80px 85px;
-  width: 400px;
   text-align: center;
-}
-
-.rest-block {
-  padding: 80px 85px;
-  text-align: center;
-}
-
-.rest-title {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  text-transform: uppercase;
-  color: #000;
-}
-
-.rest-housing,
-.rest-souvenir {
-  background: rgba(131, 179, 211, 0.12);
-}
-
-.rest-food {
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
-  background: #fff;
 }
 
 .interest {
   text-align: center;
+  padding: 96px 304px;
 }
 
 .mailing {
   background: #82b3d3 url(../images/bacground-mailing.jpg) center / cover no-repeat;
   color: #fff;
   text-align: center;
+  padding: 96px 258px 104px 258px;
 }
 
 .mailing-title {
@@ -317,11 +291,17 @@ body {
   font-size: 60px;
   line-height: 78px;
   color: #fff;
-  margin: 0;
+  margin: 0 0 8px;
 }
 
 .home {
-  background: url(../images/icons/home.svg) no-repeat;
+  background: url(../images/icons/home.svg) center no-repeat;
+  padding: 12px;
+}
+
+.breadcrumbs{
+  margin: 0 0 40px;
+  padding: 0;
 }
 
 .breadcrumbs-item {
@@ -332,12 +312,11 @@ body {
   content: url(../images/icons/breadcrumbs-arrow.svg);
   margin-left: 10px;
   margin-right: 10px;
-  width: 8px;
-  height: 11px;
 }
 
 .breadcrumbs-item:first-child::before {
   content: "";
+  margin: 0;
 }
 
 .breadcrumbs-link {
@@ -352,7 +331,8 @@ body {
   display: flex;
   justify-content: space-between;
 }
-.catalog-filter-list{
+
+.catalog-filter-list {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -409,9 +389,11 @@ body {
   align-items: center;
   margin-left: 70px;
 }
-.sort-list:last-child{
+
+.sort-list:last-child {
   margin-right: 0;
 }
+
 .sort {
   border: 2px solid #e5e5e5;
   border-radius: 4px;
@@ -420,29 +402,28 @@ body {
 }
 
 .sort-cart {
-  background: url(../images/icons/variant=tile.svg) no-repeat;
+  background: url(../images/icons/variant=tile.svg) center no-repeat;
 }
 
 .sort-slide {
-  background: url(../images/icons/variant-slideshow.svg) no-repeat;
+  background: url(../images/icons/variant-slideshow.svg) center no-repeat;
 }
 
 .sort-list {
-  background: url(../images/icons/variant-list.svg) no-repeat;
+  background: url(../images/icons/variant-list.svg) center no-repeat;
 }
 
 .product-cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-bottom: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
+  gap: 20px;
 }
 
 .product-card {
   border: 1px solid #e5e5e5;
   border-radius: 4px;
   padding: 20px;
-  width: 340px;
+  flex-basis: 340px;
   box-sizing: border-box;
 }
 
@@ -482,7 +463,7 @@ body {
 }
 
 .rating-star {
-  background: url(../images/icons/star.svg) no-repeat;
+  background: url(../images/icons/star.svg) center no-repeat;
   padding: 10px;
 }
 
@@ -598,7 +579,7 @@ body {
 }
 
 .logo-academy {
-  background: url(../images/icons/brand-htmlacademy.svg) no-repeat;
+  background: url(../images/icons/brand-htmlacademy.svg) center no-repeat;
   display: block;
   padding: 20px;
   width: 80px;
