--- a/styles/styles.css
+++ b/styles/styles.css
@@ -420,10 +420,11 @@ body {
 }
 
 .product-card {
+  display: flex;
+  flex-direction: column;
   border: 1px solid #e5e5e5;
   border-radius: 4px;
   padding: 20px;
-  flex-basis: 340px;
   box-sizing: border-box;
 }
 
@@ -431,18 +432,27 @@ body {
   text-decoration: none;
   display: block;
 }
+.product-card-img{
+  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin-bottom: 16px;
+}
 
 .product-card-title {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   color: #000;
-  margin-top: 16px;
+  margin: 0 0 16px;
 }
 
 .product-card-description {
   display: flex;
   justify-content: space-between;
+  margin: 0 0 16px;
+  flex-grow: 1;
 }
 
 .buttons-block {
