--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,20 +66,22 @@ body {
   margin: 0 auto;
 }
 
+/* Кнопки */
 .button {
   font-family: inherit;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
   color: #fff;
   background: #756157;
   border-radius: 4px;
-  padding: 8px 14px;
+  padding: 0 12px;
   border: none;
   text-decoration: none;
   box-sizing: border-box;
+  width: 100%;
 }
 
 .button:hover,
@@ -101,9 +103,21 @@ body {
   background-color: #68a2ca;
 }
 
+.button-green {
+  background-color: #7db54f;
+}
+
+.button-green:hover,
+.button-green:focus {
+  background-color: #6c9e42;
+}
+.button-apply{
+  padding: 0;
+}
+
 .button-reset {
-  margin-top: 32px;
-  padding: 8px 50px;
+  margin-top: 28px;
+  padding: 0 56px;
   background-color: rgba(0, 0, 0, 0);
 }
 
@@ -114,6 +128,7 @@ body {
 
 .button-reset:focus {
   background-color: rgba(0, 0, 0, 0);
+  outline: 3px solid #83b3d3;
 }
 
 /* header */
@@ -131,6 +146,9 @@ body {
 .main-logo {
   display: block;
   margin-right: 30px;
+  margin-bottom: -7px;
+  z-index: 1;
+  position: relative;
 }
 
 .navigation {
@@ -156,9 +174,9 @@ body {
   padding: 20px 16px;
 }
 
-.navigation-link:hover::before,
-.navigation-link:focus::before,
-.navigation-link:active::before {
+.navigation-link:hover::after,
+.navigation-link:focus::after,
+.navigation-link:active::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -168,7 +186,7 @@ body {
   height: 2px;
 }
 
-.navigation-link-current::before {
+.navigation-link-current::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -180,18 +198,40 @@ body {
 
 .navigation-link-search {
   background: url(../images/icons/search.svg) center no-repeat;
-  padding: 22px 30px;
+  padding: 20px 13px;
+  display: block;
+  width: 19px;
+  height: 19px;
 }
 
 .navigation-link-selected {
   background: url(../images/icons/heart.svg) center no-repeat;
-  padding: 22px 30px;
+  padding: 20px 13px;
   margin-right: 20px;
+  position: relative;
+  display: block;
+  width: 19px;
+  height: 19px;
 }
 
 .navigation-link-button {
-  padding-left: 34px;
-  padding-right: 34px;
+  padding: 10px 34px;
+}
+
+.like-icon-number {
+  position: absolute;
+  font-family: inherit;
+  font-size: 10px;
+  line-height: 10px;
+  color: #fff;
+  background-color: #7db54f;
+  padding: 5px;
+  min-width: 20px;
+  box-sizing: border-box;
+  text-decoration: none;
+  border-radius: 100vh;
+  top: 10px;
+  left: 20px;
 }
 
 /* end header */
@@ -206,7 +246,7 @@ body {
     url(../images/index-bacground.jpg) center / cover no-repeat rgba(131, 179, 211, 0.2);
   text-align: center;
   padding-top: 50px;
-  padding-bottom: 84px;
+  padding-bottom: 80px;
 }
 
 .advantages-intro {
@@ -222,7 +262,7 @@ body {
   text-align: center;
   color: #000;
   margin-top: 0;
-  margin-bottom: 25px;
+  margin-bottom: 23px;
 }
 
 .text-basic {
@@ -230,7 +270,7 @@ body {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
-  margin: 0 0 54px 0;
+  margin: 0 0 20px 0;
 }
 
 .advantages {
@@ -248,10 +288,10 @@ body {
   text-align: center;
   margin: 0 0 30px 0;
   color: #000;
-  max-width: 175px;
+  max-width: 172px;
 }
 
-.advantages-title::before {
+.advantages-title::after {
   content: "";
   position: absolute;
   width: 60px;
@@ -266,7 +306,7 @@ body {
   color: #fff;
 }
 
-.advantages-title-white::before {
+.advantages-title-white::after {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
@@ -324,8 +364,26 @@ body {
   grid-template-columns: repeat(3, 400px);
 }
 
+.relax-image {
+  margin-bottom: 30px;
+}
+
+.relax-title {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-transform: uppercase;
+  color: #000;
+  margin: 0 0 24px 0;
+}
+
+.relax-description {
+  margin: 0;
+}
+
 .relax-intro {
-  padding: 64px 347px;
+  padding: 64px 347px 42px;
   grid-column: 1 / -1;
 }
 
@@ -346,6 +404,13 @@ body {
   padding: 96px 304px;
 }
 
+.interest-button {
+  width: 376px;
+  font-size: 20px;
+  margin-top: 36px;
+  padding: 8px;
+}
+
 .mailing {
   background: #82b3d3 url(../images/bacground-mailing.jpg) center / cover no-repeat;
   color: #fff;
@@ -355,6 +420,9 @@ body {
 
 .mailing-title {
   color: #fff;
+}
+.mailing-text{
+  margin-bottom: 52px;
 }
 
 .mailing-form {
@@ -367,6 +435,8 @@ body {
 .additional-button {
   border-radius: 0 4px 4px 0;
   padding: 8px 50px;
+  font-size: 20px;
+  width: 232px;
 }
 
 .mailing-input {
@@ -379,6 +449,26 @@ body {
   box-sizing: border-box;
 }
 
+.mailing-input:hover,
+.mailing-input:focus,
+.mailing-input:active {
+  outline: 2px solid #68a2ca;
+}
+
+.mailing-input:invalid {
+  outline: 2px solid #ff5757;
+  ;
+}
+
+.mailing-input:invalid:placeholder-shown {
+  outline: none;
+}
+
+.mailing-input::placeholder {
+  color: #000;
+  opacity: 0.6;
+}
+
 /* end main */
 
 /* catalog */
@@ -386,7 +476,7 @@ body {
 .hotel {
   background: rgba(131, 179, 211, 0.2) url(../images/catalog-background.jpg) center / cover no-repeat;
   color: #fff;
-  padding: 35px 70px 70px;
+  padding: 35px 70px 70px 70px;
 }
 
 .hotel-title {
@@ -399,7 +489,9 @@ body {
 
 .home {
   background: url(../images/icons/home.svg) center no-repeat;
-  padding: 12px;
+  width: 12px;
+  height: 12px;
+  display: block;
 }
 
 .breadcrumbs {
@@ -414,7 +506,7 @@ body {
 .breadcrumbs-item::before {
   content: url(../images/icons/breadcrumbs-arrow.svg);
   margin-left: 10px;
-  margin-right: 10px;
+  margin-right: 4px;
 }
 
 .breadcrumbs-item:first-child::before {
@@ -432,7 +524,20 @@ body {
 
 .catalog-filter {
   display: flex;
-  justify-content: space-between;
+}
+
+.catalog-filter-item {
+  margin-bottom: 16px;
+}
+
+.catalog-filter-item:last-child {
+  margin-bottom: 0;
+}
+
+.catalog-filter-group {
+  border: none;
+  padding: 0;
+  margin: 0;
 }
 
 .catalog-filter-list {
@@ -447,10 +552,172 @@ body {
   line-height: 24px;
   text-transform: capitalize;
   color: #fff;
+  margin-bottom: 32px;
 }
 
 .catalog-filter-price {
   width: 288px;
+}
+.catalog-filter-infrastructure{
+  margin-right: 70px;
+}
+.catalog-filter-housing{
+  margin-right: 150px;
+}
+.catalog-filter-price{
+  margin-right: 70px;
+}
+
+.control {
+  display: flex;
+}
+
+.control:hover {
+  opacity: 0.6;
+}
+
+.control:focus .control-mark {
+  border: 3px solid #83b3d3;
+}
+
+.control-mark {
+  position: relative;
+  border-radius: 4px;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  margin-right: 16px;
+  box-sizing: border-box;
+}
+
+.control-input[type=checkbox]:checked + .control-mark {
+  background: #fff url(../images/icons/control-checkbox.svg) no-repeat center;
+}
+
+.control-input[type=radio] + .control-mark {
+  border-radius: 50%;
+}
+
+.control-input[type=radio]:checked + .control-mark::before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background: #3f5e72;
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.control-label {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  color: #fff;
+}
+
+.range-wrapper-inputs {
+  margin-bottom: 44px;
+  display: flex;
+  /* position: relative; */
+}
+
+.range-inputs-group {
+  position: relative;
+}
+
+.range-input {
+  padding-left: 20px;
+  width: 143px;
+  height: 48px;
+  background: #f2f2f2;
+  border: none;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000;
+  box-sizing: border-box;
+}
+
+.range-input::-webkit-inner-spin-button,
+.range-input::-webkit-outer-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.range-input-min {
+  border-radius: 4px 0 0 4px;
+  margin-right: 2px;
+}
+
+.range-input-max {
+  border-radius: 0 4px 4px 0;
+}
+
+.catalog-filter-label {
+  display: flex;
+  position: absolute;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: right;
+  color: #000;
+  opacity: 0.3;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+}
+
+.range-groupe {
+  position: relative;
+}
+
+.range-scale {
+  position: absolute;
+  height: 4px;
+  background-color: #fff;
+  opacity: 0.3;
+  width: 288px;
+}
+
+.range-bar {
+  position: absolute;
+  background-color: #fff;
+  height: 4px;
+}
+
+.range-toggle {
+  position: absolute;
+  border-radius: 5px;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border: none;
+  box-sizing: border-box;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.toggle-max {
+  right: 0;
+}
+
+.range-toggle:hover {
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
+}
+
+.range-toggle:focus {
+  border: 3px solid #83b3d3;
+}
+
+.range-toggle:active {
+  border: 2px solid #83b3d3;
 }
 
 .catalog-buttons {
@@ -467,6 +734,7 @@ body {
   display: flex;
   padding-top: 50px;
   padding-bottom: 40px;
+  align-items: center;
 }
 
 .select-control {
@@ -476,12 +744,26 @@ body {
   line-height: 21px;
   color: #333;
   margin-left: auto;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  padding: 12px 20px;
+  width: 292px;
+  height: 49px;
+  box-sizing: border-box;
+  appearance: none;
+  background: url(../images/icons/arrow.svg) no-repeat 250px center;
+}
+
+.select-control:active,
+.select-control:hover,
+.select-control:focus {
+  border: 2px solid #68a2ca;
 }
 
 .hotel-cart-title {
   font-weight: 700;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 120%;
   text-transform: uppercase;
   color: #000;
   margin: 0;
@@ -490,7 +772,7 @@ body {
 .sort-lists {
   display: flex;
   align-items: center;
-  margin-left: 70px;
+  margin-left: 60px;
 }
 
 .sort-list:last-child {
@@ -502,11 +784,15 @@ body {
   border-radius: 4px;
   padding: 16px;
   margin-right: 8px;
+  display: block;
+  width: 16px;
+  height: 14px;
 }
+
 .sort:hover,
 .sort:focus,
 .sort:active,
-.sort-curent{
+.sort-curent {
   border-color: #000;
 }
 
@@ -526,6 +812,8 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 340px);
   gap: 20px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #e5e5e5;;
 }
 
 .product-card {
@@ -569,6 +857,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin-bottom: 16px;
+  gap: 20px;
 }
 
 .rating {
@@ -584,7 +873,8 @@ body {
 
 .rating-star {
   background: url(../images/icons/star.svg) center no-repeat;
-  padding: 10px;
+  width: 22px;
+  height: 18px;
 }
 
 .rating-result {
@@ -607,16 +897,16 @@ body {
 }
 
 .pagination-list:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 8px;
 }
 
 .pagination-item {
   border-radius: 4px;
-  width: 60px;
+  min-width: 60px;
   height: 60px;
-  display: block;
-  text-align: center;
-  align-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
@@ -624,12 +914,15 @@ body {
   color: #fff;
   background-color: #82b3d3;
   text-decoration: none;
+  box-sizing: border-box;
 }
+
 .pagination-item:hover,
-.pagination-item:focus{
+.pagination-item:focus {
   background-color: #68a2ca;
 }
-.pagination-item:active{
+
+.pagination-item:active {
   background-color: #82b3d3;
   color: rgba(255, 255, 255, 0.3);
 }
@@ -657,7 +950,7 @@ body {
   background-color: #fff;
   color: #333;
   text-align: center;
-  padding: 96px 258px 104px 258px;
+  padding: 104px 258px;
 }
 
 .mailing-catalog .mailing-title {
@@ -686,20 +979,46 @@ body {
   align-items: center;
 }
 
-.button-social-vk,
-.button-social-telegram,
-.button-social-youtube {
+.button-social-vk {
+  mask: url(../images/icons/Social-Vk.svg) center no-repeat;
+  background: #83b3d3;
+  display: block;
+  width: 22px;
+  height: 14px;
   padding: 12px;
-  display: flex;
 }
 
-.social-icon:hover,
-.social-icon:focus {
-  fill: #68a2ca;
+.button-social-telegram {
+  mask: url(../images/icons/Social-Telegram.svg) center no-repeat;
+  background: #83b3d3;
+  display: block;
+  width: 22px;
+  height: 14px;
+  padding: 12px;
 }
 
-.social-icon:active {
-  fill: rgba(104, 162, 202, 0.3);
+.button-social-youtube {
+  mask: url(../images/icons/Social-Youtube.svg) center no-repeat;
+  background: #83b3d3;
+  display: block;
+  width: 22px;
+  height: 14px;
+  padding: 12px;
+}
+
+.button-social-vk:hover,
+.button-social-vk:focus,
+.button-social-telegram:hover,
+.button-social-telegram:focus,
+.button-social-youtube:hover,
+.button-social-youtube:focus {
+  background: #68a2ca;
+}
+
+.button-social-vk:active,
+.button-social-telegram:active,
+.button-social-youtube:active {
+  background: rgba(104, 162, 202, 0.3);
 }
 
 .footer-phone {
@@ -721,12 +1040,21 @@ body {
   color: rgba(117, 97, 87, 0.3);
 }
 
+.logo-academy {
+  mask: url(../images/icons/brand-htmlacademy.svg) center no-repeat;
+  background: #000;
+  width: 115px;
+  height: 34px;
+  display: block;
+}
+
 .logo-academy:hover,
 .logo-academy:focus {
-  fill: #756157;
+  background: #756157;
 }
-.logo-academy:active{
-  fill: rgba(117, 97, 87, 0.3);
+
+.logo-academy:active {
+  background: rgba(117, 97, 87, 0.3);
 }
 
 /* end footer */
