--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,7 +111,8 @@ body {
 .button-green:focus {
   background-color: #6c9e42;
 }
-.button-apply{
+
+.button-apply {
   padding: 0;
 }
 
@@ -245,7 +246,7 @@ body {
   background: url(../images/index-bacground-bow.svg) bottom no-repeat,
     url(../images/index-bacground.jpg) center / cover no-repeat rgba(131, 179, 211, 0.2);
   text-align: center;
-  padding-top: 50px;
+  padding-top: 53px;
   padding-bottom: 80px;
 }
 
@@ -421,7 +422,8 @@ body {
 .mailing-title {
   color: #fff;
 }
-.mailing-text{
+
+.mailing-text {
   margin-bottom: 52px;
 }
 
@@ -558,13 +560,16 @@ body {
 .catalog-filter-price {
   width: 288px;
 }
-.catalog-filter-infrastructure{
+
+.catalog-filter-infrastructure {
   margin-right: 70px;
 }
-.catalog-filter-housing{
+
+.catalog-filter-housing {
   margin-right: 150px;
 }
-.catalog-filter-price{
+
+.catalog-filter-price {
   margin-right: 70px;
 }
 
@@ -813,7 +818,8 @@ body {
   grid-template-columns: repeat(3, 340px);
   gap: 20px;
   padding-bottom: 40px;
-  border-bottom: 1px solid #e5e5e5;;
+  border-bottom: 1px solid #e5e5e5;
+  ;
 }
 
 .product-card {
@@ -1058,3 +1064,284 @@ body {
 }
 
 /* end footer */
+
+
+/* Попап */
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+  display: none;
+}
+
+.modal-search-hotel {
+  position: relative;
+  margin: auto;
+  border-radius: 30px;
+  padding: 64px 70px;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+  background: #fff;
+  width: 717px;
+  box-sizing: border-box;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 64px;
+  right: 52px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #F2F2F2;
+  border: none;
+  cursor: pointer;
+}
+
+.modal-close-button::before,
+.modal-close-button::after {
+  content: "";
+  width: 14px;
+  height: 2px;
+  background-color: #000;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.modal-close-button::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.modal-close-button::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.modal-close-button:hover {
+  background-color: #e5e5e5;
+}
+
+.modal-close-button:focus {
+  background-color: #e5e5e5;
+  border: 3px solid #83b3d3;
+}
+
+.modal-close-button:active::before,
+.modal-close-button:active::after {
+  opacity: 0.3;
+  border: none;
+}
+
+.modal-title {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000;
+  margin: 0;
+  margin-bottom: 64px;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+.modal-button-form{
+  font-size: 20px;
+  padding: 8px;
+}
+
+.modal-form-label {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: capitalize;
+  color: #000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-form-text {
+  position: absolute;
+  bottom: -24px;
+  left: 20px;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #333;
+}
+
+.text-danger {
+  color: #ff5757;
+}
+
+.modal-input-and-text {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.input-date {
+  border-radius: 4px;
+  border: none;
+  padding: 12px 20px;
+  width: 440px;
+  height: 48px;
+  box-sizing: border-box;
+  background: #f2f2f2 url(../images/icons/date.svg) no-repeat right 20px center;
+  appearance: none;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+
+  line-height: 20px;
+  color: #000;
+}
+
+.input-date::-webkit-calendar-picker-indicator {
+  appearance: none;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.adults-children {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-input-number {
+  border-radius: 4px;
+  border: none;
+  width: 36px;
+  height: 48px;
+  box-sizing: border-box;
+  background: #f2f2f2;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  text-align: center;
+  color: #000;
+  outline: none;
+}
+
+.modal-input-number::-webkit-inner-spin-button,
+.modal-input-number::-webkit-outer-spin-button {
+  appearance: none;
+  -moz-appearance: textfield;
+}
+
+.modal-block-number-input {
+  position: relative;
+  box-sizing: border-box;
+  display: inline-flex;
+  margin-left: 46px;
+}
+
+.button-minus,
+.button-plus {
+  border: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  width: 38px;
+}
+
+.button-minus {
+  border-radius: 4px 0 0 4px;
+}
+
+.button-plus {
+  border-radius: 0 4px 4px 0;
+}
+
+.button-minus::after {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 2px;
+  background-color: rgba(117, 97, 87, 0.3);
+  left: 14px;
+  cursor: pointer;
+}
+
+.button-plus::before,
+.button-plus::after {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 2px;
+  background-color: rgba(117, 97, 87, 0.3);
+  right: 14px;
+  cursor: pointer;
+}
+
+.button-plus::before {
+  transform: rotate(90deg);
+}
+
+.button-plus:hover::after,
+.button-plus:hover::before,
+.button-minus:hover::after {
+  background-color: #000;
+}
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip-toggle {
+  background-color: #83b3d3;
+  border-radius: 50%;
+  border: none;
+  box-sizing: border-box;
+  padding: 2px 3px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.tooltip-text {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.3);
+  background: #333;
+  border-radius: 10px;
+  padding: 18px;
+  width: 217px;
+  position: absolute;
+  left: 50%;
+  top: 44px;
+  transform: translate(-50%);
+  margin-left: 5px;
+  display: none;
+}
+.tooltip-text::before{
+  content: "";
+    width: 19px;
+      height: 19px;
+      background-color: #333;
+      display: block;
+      position: absolute;
+      top: -9px;
+      left: 50%;
+      transform: translate(-50%) rotate(45deg);
+}
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text{
+  display: block;
+}
+
+
+/* Конец Попап */
